--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.css" >
     <body style="background-color: #eaebe4; margin: 12; text-align: center;"></body>
 </head>
-<link rel="stylesheet" href="/static/style.css">
+<link rel="stylesheet" href="/style.css">
 </style type="text/css">
 </style>
 
