--- a/concurrency.html
+++ b/concurrency.html
@@ -12,7 +12,7 @@
 
 <nav>
     <div class="dropdown">
-        <button><a href="" class="home">Home</a></button>
+        <button><a href="https://alagaotaylor.github.io/pdc-sample.github.io" class="home">Home</a></button>
         <div class="questions">
         <button>Game Questions Categories</button>
         <ul>
