--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="questions">
         <button>Game Questions Categories</button>
         <ul>
-            <li><a href="/concurrency.html">1 - Concurrency</a></li>
+            <li><a href="concurrency">1 - Concurrency</a></li>
             <li><a href="">2 - Mutual Exclusion</a></li>
             <li><a href="">3 - Consistency in State/Memory Manipulation</a></li>
             <li><a href="">Youtube App</a></li>
