--- a/concurrency.html
+++ b/concurrency.html
@@ -12,14 +12,13 @@
 
 <nav>
     <div class="dropdown">
-        <button><a href="" class="home">Home</a></button>
+        <button><a href="https://alagaotaylor.github.io/pdc-sample.github.io" class="home">Home</a></button>
         <div class="questions">
         <button>Game Questions Categories</button>
         <ul>
-            <li><a href="/concurrency.html">1 - Concurrency</a></li>
+            <li><a href="https://alagaotaylor.github.io/pdc-sample.github.io/concurrency">1 - Concurrency</a></li>
             <li><a href="#">2 - Mutual Exclusion</a></li>
             <li><a href="#">3 - Consistency in State/Memory Manipulation</a></li>
-            <li><a href="#">Youtube App</a></li>
         </ul>
         </div>
     </div>
