--- a/concurrency.html
+++ b/concurrency.html
@@ -17,8 +17,13 @@
         <button>Game Questions Categories</button>
         <ul>
             <li><a href="https://alagaotaylor.github.io/pdc-sample.github.io/concurrency">1 - Concurrency</a></li>
-            <li><a href="#">2 - Mutual Exclusion</a></li>
-            <li><a href="#">3 - Consistency in State/Memory Manipulation</a></li>
+            <li><a href="">2 - Mutual Exclusion</a></li>
+            <li><a href="">3 - Consistency in State/Memory Manipulation</a></li>
+            <li><a href="">4 - Message Passing</a></li>
+            <li><a href="">5 - Shared Memory Models</a></li>
+            <li><a href="">6 - Scalability</a></li>
+            <li><a href="">7 - Scheduling and Load Balancing</a></li>
+            <li><a href="">8 - Speedup/Amdahl's Law/a></li>
         </ul>
         </div>
     </div>
@@ -26,8 +31,9 @@
 </nav>
 
 <body>
-<h1>Click here for questions</h1>
-<p>Question 1</p>
+<h1>Concurrency</h1>
+<p>Question 1: What is concurrency in parallel and distributed computing?</p>
+<button href = "/concurrency1.html" >Click here for the answer</button>
 
 
 
