--- a/concurrency1.html
+++ b/concurrency1.html
@@ -31,14 +31,14 @@
 </nav>
 
 <body>
-<h1>About</h1>
-<p>PDC Quest is about....</p>
-
-<h2>PDC Quest Card Game Rules</h2>
-<p>PDC Quest game rules ....</p>
-
-<h2>PDC Quest Card Game Questions</h2>
-
+    <h1>Concurrency</h1>
+    <p>Question 1: What is concurrency in parallel and distributed computing?</p>
+    <p>Answer:Concurrency is the ability of a 
+        system to manage multiple tasks or processes 
+        at the same time, even though the tasks may not 
+        be running simultaneously. It allows overlapping 
+        execution of tasks to improve efficiency and resource 
+        utilization. </p>
 
 </body>
-</html>
+</html>    
