--- a/concurrency.html
+++ b/concurrency.html
@@ -33,8 +33,9 @@
 <body>
 <h1>Concurrency</h1>
 <p>Question 1: What is concurrency in parallel and distributed computing?</p>
-<button href = "/concurrency1.html" >Click here for the answer</button>
-
+<a href='/concurrency1.html' class="btn btn-primary">Click here for the answer</a>
+<br>
+<p>Question 2: Why is concurrency important in distributed systems?</p>
 
 
 </body>
