--- a/concurrency.html
+++ b/concurrency.html
@@ -1,41 +1,34 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device.width, initial-scale=1.0">
-    <title>PDC Quest</title>
-    <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.css" >
-    <body style="background-color: #eaebe4; margin: 12; text-align: center;"></body>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dropdown Menu</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<link rel="stylesheet" href="style.css">
-</style type="text/css">
-</style>
 <body>
-<nav>
-    <div class="dropdown">
-        <button><a href="https://alagaotaylor.github.io/pdc-sample.github.io" class="home">Home</a></button>
-        <div class="questions">
-        <button>Game Questions Categories</button>
+    <nav>
         <ul>
-            <li><a href="https://alagaotaylor.github.io/pdc-sample.github.io/concurrency">1 - Concurrency</a></li>
-            <li><a href="">2 - Mutual Exclusion</a></li>
-            <li><a href="">3 - Consistency in State/Memory Manipulation</a></li>
-            <li><a href="">4 - Message Passing</a></li>
-            <li><a href="">5 - Shared Memory Models</a></li>
-            <li><a href="">6 - Scalability</a></li>
-            <li><a href="">7 - Scheduling and Load Balancing</a></li>
-            <li><a href="">8 - Speedup/Amdahl's Law/a></li>
+        <li><a href="../">Home</a></li>
+        <li>
+            <a href="#">Question Categories ▾</a>
+            <ul class="dropdown">
+                <li><a href="./concurrency.html">1 - Concurrency</a></li>
+                <li><a href="#">2 - Mutual Exclusion</a></li>
+                <li><a href="#">3 - Consistency in State/Memory Manipulation</a></li>
+                <li><a href="#">4 - Message Passing</a></li>
+            </ul>
+        </li>
         </ul>
-        </div>
-    </div>
-    <hr style="height:5px;border-width:0;color:gray;background-color:gray">
-</nav>
+    </nav>
+    <h1 style="font-size: 40px">Concurrency Questions</h1>
+    <br>
+    <p style="font-size: 20px">Description</p>
+    <br>
 
-<h1>Concurrency</h1>
-<p>Question 1: What is concurrency in parallel and distributed computing?</p>
-<a href='/concurrency1.html' class="btn btn-primary">Click here for the answer</a>
-<br>
-<p>Question 2: Why is concurrency important in distributed systems?</p>
-
-
+    <h2>1. What is the concurrency in parallel and distributed computing?</h2>
+    <a href='./concurrency1.html' class="btn btn-primary"> Reveal Answer </a>
+    
 </body>
 </html>
