--- a/concurrency1.html
+++ b/concurrency1.html
@@ -1,44 +1,36 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device.width, initial-scale=1.0">
-    <title>PDC Quest</title>
-    <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.css" >
-    <body style="background-color: #eaebe4; margin: 12; text-align: center;"></body>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dropdown Menu</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<link rel="stylesheet" href="style.css">
-</style type="text/css">
-</style>
-
-<nav>
-    <div class="dropdown">
-        <button><a href="https://alagaotaylor.github.io/pdc-sample.github.io" class="home">Home</a></button>
-        <div class="questions">
-        <button>Game Questions Categories</button>
-        <ul>
-            <li><a href="https://alagaotaylor.github.io/pdc-sample.github.io/concurrency">1 - Concurrency</a></li>
-            <li><a href="">2 - Mutual Exclusion</a></li>
-            <li><a href="">3 - Consistency in State/Memory Manipulation</a></li>
-            <li><a href="">4 - Message Passing</a></li>
-            <li><a href="">5 - Shared Memory Models</a></li>
-            <li><a href="">6 - Scalability</a></li>
-            <li><a href="">7 - Scheduling and Load Balancing</a></li>
-            <li><a href="">8 - Speedup/Amdahl's Law/a></li>
-        </ul>
-        </div>
-    </div>
-    <hr style="height:5px;border-width:0;color:gray;background-color:gray">
-</nav>
-
 <body>
-    <h1>Concurrency</h1>
-    <p>Question 1: What is concurrency in parallel and distributed computing?</p>
-    <p>Answer:Concurrency is the ability of a 
-        system to manage multiple tasks or processes 
-        at the same time, even though the tasks may not 
-        be running simultaneously. It allows overlapping 
-        execution of tasks to improve efficiency and resource 
-        utilization. </p>
+    <nav>
+        <ul>
+        <li><a href="../">Home</a></li>
+        <li>
+            <a href="#">Question Categories ▾</a>
+            <ul class="dropdown">
+                <li><a href="./concurrency.html">1 - Concurrency</a></li>
+                <li><a href="#">2 - Mutual Exclusion</a></li>
+                <li><a href="#">3 - Consistency in State/Memory Manipulation</a></li>
+                <li><a href="#">4 - Message Passing</a></li>
+            </ul>
+        </li>
+        </ul>
+    </nav>
+    <h1 style="font-size: 40px">Concurrency Questions</h1>
+    
+    <br>
 
+    <h2>What is the concurrency in parallel and distributed computing?</h2>
+    <br>
+    <p style="font-size: 20px"> Answer:</p>
+    <p style="font-size: 20px">Concurrency is the ability of a system to manage multiple tasks or processes at the same time, even though the tasks may not be running simultaneously. It allows overlapping execution of tasks to improve efficiency and resource utilization.</p>
+    <br>
+    <p>Learn more:</p>
 </body>
-</html>    
+</html>
