--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body>
     <nav>
         <ul>
-        <li><a href="">Home</a></li>
+        <li><a href="../">Home</a></li>
         <li>
             <a href="#">Question Categories ▾</a>
             <ul class="dropdown">
-                <li><a href="concurrency.html" onclick="window.open('concurrency.html', '_self');">
+                <li><a href="concurrency.html" onclick="window.open('concurrency.html', '_self');">1 - Concurrency</a></li>
                 <li><a href="#">2 - Mutual Exclusion</a></li>
                 <li><a href="#">3 - Consistency in State/Memory Manipulation</a></li>
                 <li><a href="#">4 - Message Passing</a></li>
