--- a/concurrency2.html
+++ b/concurrency2.html
@@ -23,12 +23,14 @@
         </ul>
     </nav>
     <h1 style="font-size: 40px">Concurrency Questions</h1>
-    <br>
-    <p style="font-size: 20px">Description</p>
+    
     <br>
 
-    <h2>1. What is the concurrency in parallel and distributed computing?</h2>
-    <a href='./concurrency1.html' class="btn btn-primary"> Reveal Answer </a>
-    
+    <h2>What is the concurrency in parallel and distributed computing?</h2>
+    <br>
+    <p style="font-size: 20px"> Answer:</p>
+    <p style="font-size: 20px">Concurrency is the ability of a system to manage multiple tasks or processes at the same time, even though the tasks may not be running simultaneously. It allows overlapping execution of tasks to improve efficiency and resource utilization.</p>
+    <br>
+    <p>Learn more:</p>
 </body>
 </html>
