--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav>
         <ul>
-        <li><a href="../">Home</a></li>
+            <li><a href="index.html" onclick="window.open('', '_self');">Home</a></li>
         <li>
             <a href="#">Question Categories ▾</a>
             <ul class="dropdown">
