--- a/concurrency.html
+++ b/concurrency.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html" onclick="window.open('', '_self');">Home</a></li>
+            <li><a href="" onclick="window.open('', '_self');">Home</a></li>
         <li>
             <a href="#">Question Categories ▾</a>
             <ul class="dropdown">
