--- a/concurrency3.html
+++ b/concurrency3.html
@@ -23,15 +23,15 @@
         </ul>
     </nav>
     <h1 style="font-size: 40px">Concurrency Questions</h1>
-    <br>
-    <p style="font-size: 20px">Description</p>
-    <br>
-
-    <h2>What is the concurrency in parallel and distributed computing?</h2>
-    <a href='./concurrency1.html' class="btn btn-primary"> Reveal Answer </a>
-
-    <h2>Why is concurrency important in distributed systems?</h2>
-    <a href='./concurrency2.html' class="btn btn-primary"> Reveal Answer </a>
     
+    <br>
+
+    <h2>How does concurrency differ from parallelism?</h2>
+    <br>
+    <p style="font-size: 20px"> Answer:</p>
+    <p style="font-size: 20px">Concurrency involves handling multiple tasks at the same time but not necessarily executing them simultaneously. Parallelism, on the other hand, involves executing multiple tasks at the exact same time on different processors or cores.
+    </p>
+    <br>
+    <p>Learn more:</p>
 </body>
 </html>
