--- a/concurrency.html
+++ b/concurrency.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="" onclick="window.open('', '_self');">Home</a></li>
+            <li><a href="index.html" onclick="window.open('', '_self');">Home</a></li>
         <li>
             <a href="#">Question Categories ▾</a>
             <ul class="dropdown">
@@ -29,9 +29,14 @@
 
     <h2>What is the concurrency in parallel and distributed computing?</h2>
     <a href='./concurrency1.html' class="btn btn-primary"> Reveal Answer </a>
-
+    <br>
     <h2>Why is concurrency important in distributed systems?</h2>
     <a href='./concurrency2.html' class="btn btn-primary"> Reveal Answer </a>
-    
+    <br>
+    <h2>How does concurrency differ from parallelism?</h2>
+    <a href='./concurrency2.html' class="btn btn-primary"> Reveal Answer </a>
+
+
+
 </body>
 </html>
