--- a/concurrency.html
+++ b/concurrency.html
@@ -10,11 +10,11 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html" onclick="window.open('', '_self');">Home</a></li>
+            <li><a href="index.html"  onclick="window.open('index.html.html', '_self');">Home</a></li>
         <li>
             <a href="#">Question Categories ▾</a>
             <ul class="dropdown">
-                <li><a href="concurrency.html" onclick="window.open('concurrency.html', '_self');">1 - Concurrency</a></li>
+                <li><a href="./concurrency.html">1 - Concurrency</a></li>
                 <li><a href="mutualexclusion.html"  onclick="window.open('mutualexclusion.html', '_self');">2 - Mutual Exclusion</a></li>
                 <li><a href="#">3 - Consistency in State/Memory Manipulation</a></li>
                 <li><a href="#">4 - Message Passing</a></li>
