--- a/mutualexclusion.html
+++ b/mutualexclusion.html
@@ -10,11 +10,11 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html" onclick="window.open('', '_self');">Home</a></li>
+            <li><a href="index.html"  onclick="window.open('index.html.html', '_self');">Home</a></li>
         <li>
             <a href="#">Question Categories ▾</a>
             <ul class="dropdown">
-                <li><a href="concurrency.html" onclick="window.open('concurrency.html', '_self');">1 - Concurrency</a></li>
+                <li><a href="./concurrency.html">1 - Concurrency</a></li>
                 <li><a href="mutualexclusion.html"  onclick="window.open('mutualexclusion.html', '_self');">2 - Mutual Exclusion</a></li>
                 <li><a href="#">3 - Consistency in State/Memory Manipulation</a></li>
                 <li><a href="#">4 - Message Passing</a></li>
@@ -28,13 +28,13 @@
     <br>
 
     <h2>What is mutual exclusion in concurrent programming?</h2>
-    <a href='./concurrency1.html' class="btn btn-primary"> Reveal Answer </a>
+    <a href='./mutualexclusion1.html' class="btn btn-primary"> Reveal Answer </a>
     <br>
-    <h2>Why is concurrency important in distributed systems?</h2>
-    <a href='./concurrency2.html' class="btn btn-primary"> Reveal Answer </a>
+    <h2>Why is mutual exclusion important in distributed systems?</h2>
+    <a href='./mutualexclusion2.html' class="btn btn-primary"> Reveal Answer </a>
     <br>
-    <h2>How does concurrency differ from parallelism?</h2>
-    <a href='./concurrency2.html' class="btn btn-primary"> Reveal Answer </a>
+    <h2>What is a critical section, and how does mutual exclusion relate to it?</h2>
+    <a href='./mutualexclusion3.html' class="btn btn-primary"> Reveal Answer </a>
 
 
 
