--- a/mutualexclusion1.html
+++ b/mutualexclusion1.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html"  onclick="window.open('index.html.html', '_self');">Home</a></li>
+            <li><a href="index.html" onclick="window.open('', '_self');">Home</a></li>
         <li>
             <a href="#">Question Categories ▾</a>
             <ul class="dropdown">
@@ -26,11 +26,10 @@
     
     <br>
 
-    <h2>How does concurrency differ from parallelism?</h2>
+    <h2>What is the concurrency in parallel and distributed computing?</h2>
     <br>
     <p style="font-size: 20px"> Answer:</p>
-    <p style="font-size: 20px">Concurrency involves handling multiple tasks at the same time but not necessarily executing them simultaneously. Parallelism, on the other hand, involves executing multiple tasks at the exact same time on different processors or cores.
-    </p>
+    <p style="font-size: 20px">Concurrency is the ability of a system to manage multiple tasks or processes at the same time, even though the tasks may not be running simultaneously. It allows overlapping execution of tasks to improve efficiency and resource utilization.</p>
     <br>
     <p>Learn more:</p>
 </body>
