--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#">Question Categories ▾</a>
             <ul class="dropdown">
                 <li><a href="concurrency.html" onclick="window.open('concurrency.html', '_self');">1 - Concurrency</a></li>
-                <li><a href="#">2 - Mutual Exclusion</a></li>
+                <li><a href="mutualexclusion.html"  onclick="window.open('mutualexclusion.html', '_self');">2 - Mutual Exclusion</a></li>
                 <li><a href="#">3 - Consistency in State/Memory Manipulation</a></li>
                 <li><a href="#">4 - Message Passing</a></li>
             </ul>
