--- a/mutualexclusion2.html
+++ b/mutualexclusion2.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html"  onclick="window.open('index.html.html', '_self');">Home</a></li>
+            <li><a href="index.html" onclick="window.open('', '_self');">Home</a></li>
         <li>
             <a href="#">Question Categories ▾</a>
             <ul class="dropdown">
@@ -26,11 +26,10 @@
     
     <br>
 
-    <h2>How does concurrency differ from parallelism?</h2>
+    <h2>Why is mutual exclusion important in distributed systems?</h2>
     <br>
     <p style="font-size: 20px"> Answer:</p>
-    <p style="font-size: 20px">Concurrency involves handling multiple tasks at the same time but not necessarily executing them simultaneously. Parallelism, on the other hand, involves executing multiple tasks at the exact same time on different processors or cores.
-    </p>
+    <p style="font-size: 20px">Mutual exclusion is a property that ensures only one process or thread can access a critical section or shared resource at a time, preventing race conditions and ensuring data consistency in concurrent programs.
     <br>
     <p>Learn more:</p>
 </body>
