--- a/mutualexclusion3.html
+++ b/mutualexclusion3.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html"  onclick="window.open('index.html.html', '_self');">Home</a></li>
+            <li><a href="index.html" onclick="window.open('', '_self');">Home</a></li>
         <li>
             <a href="#">Question Categories ▾</a>
             <ul class="dropdown">
@@ -26,11 +26,10 @@
     
     <br>
 
-    <h2>How does concurrency differ from parallelism?</h2>
+    <h2>What is a critical section, and how does mutual exclusion relate to it?</h2>
     <br>
     <p style="font-size: 20px"> Answer:</p>
-    <p style="font-size: 20px">Concurrency involves handling multiple tasks at the same time but not necessarily executing them simultaneously. Parallelism, on the other hand, involves executing multiple tasks at the exact same time on different processors or cores.
-    </p>
+    <p style="font-size: 20px">A critical section is a portion of a program where shared resources are accessed or modified. Mutual exclusion ensures that only one thread or process can execute the critical section at a time, preventing concurrent access that could lead to data corruption.
     <br>
     <p>Learn more:</p>
 </body>
