--- a/concurrency1.html
+++ b/concurrency1.html
@@ -15,7 +15,7 @@
             <a href="#">Question Categories ▾</a>
             <ul class="dropdown">
                 <li><a href="./concurrency.html">1 - Concurrency</a></li>
-                <li><a href="mutualexclusion.html"  onclick="window.open('mutualexclusion.html', '_self');">2 - Mutual Exclusion</a></li>
+                <li><a href="./mutualexclusion.html"  onclick="window.open('mutualexclusion.html', '_self');">2 - Mutual Exclusion</a></li>
                 <li><a href="#">3 - Consistency in State/Memory Manipulation</a></li>
                 <li><a href="#">4 - Message Passing</a></li>
             </ul>
