--- a/concurrency.html
+++ b/concurrency.html
@@ -10,14 +10,18 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html"  onclick="window.open('index.html.html', '_self');">Home</a></li>
+            <li><a href="index.html" onclick="window.open('', '_self');">Home</a></li>
         <li>
             <a href="#">Question Categories ▾</a>
             <ul class="dropdown">
-                <li><a href="./concurrency.html">1 - Concurrency</a></li>
+                <li><a href="concurrency.html" onclick="window.open('concurrency.html', '_self');">1 - Concurrency</a></li>
                 <li><a href="mutualexclusion.html"  onclick="window.open('mutualexclusion.html', '_self');">2 - Mutual Exclusion</a></li>
-                <li><a href="#">3 - Consistency in State/Memory Manipulation</a></li>
-                <li><a href="#">4 - Message Passing</a></li>
+                <li><a href="consistency.html" onclick="window.open('consistency.html', '_self');">3 - Consistency in State/Memory Manipulation</a></li>
+                <li><a href="messagepassing.html" onclick="window.open('messagepassing.html', '_self');">4 - Message Passing</a></li>
+                <li><a href="sharedmemory.html" onclick="window.open('sharedmemory.html', '_self');">5 - Message Passing</a></li>
+                <li><a href="scalability.html" onclick="window.open('scalability.html', '_self');">6 - Scalability</a></li>
+                <li><a href="scheduling.html" onclick="window.open('scheduling.html', '_self');">7 - Scheduling and Load Balancing</a></li>
+                <li><a href="speedup.html" onclick="window.open('speedup.html', '_self');">8 - Speedup/Amdahl's Law</a></li>
             </ul>
         </li>
         </ul>
