--- a/messagepassing1.html
+++ b/messagepassing1.html
@@ -26,21 +26,16 @@
         </li>
         </ul>
     </nav>
-    <h1 style="font-size: 40px">Concurrency Questions</h1>
-    <br>
-    <p style="font-size: 20px">Description</p>
+    <h1 style="font-size: 40px">Message Passing Questions</h1>
+    
     <br>
 
-    <h2>What is consistency in distributed systems?</h2>
-    <a href='./consistency1.html' class="btn btn-primary"> Reveal Answer </a>
+    <h2>What is message-passing in parallel and distributed computing?</h2>
     <br>
-    <h2>What is the difference between strong and eventual consistency?</h2>
-    <a href='./consistency2.html' class="btn btn-primary"> Reveal Answer </a>
+    <p style="font-size: 20px"> Answer:</p>
+    <p style="font-size: 20px">
+        Message-passing is a communication method where processes exchange data by sending and receiving messages, facilitating coordination in systems without shared memory.
     <br>
-    <h2>What is the CAP theorem and how does it relate to consistency?</h2>
-    <a href='./consistency3.html' class="btn btn-primary"> Reveal Answer </a>
-
-
-
+    <p>Learn more:</p>
 </body>
 </html>
