--- a/messagepassing2.html
+++ b/messagepassing2.html
@@ -26,21 +26,16 @@
         </li>
         </ul>
     </nav>
-    <h1 style="font-size: 40px">Concurrency Questions</h1>
-    <br>
-    <p style="font-size: 20px">Description</p>
+    <h1 style="font-size: 40px">Message Passing Questions</h1>
+    
     <br>
 
-    <h2>What is consistency in distributed systems?</h2>
-    <a href='./consistency1.html' class="btn btn-primary"> Reveal Answer </a>
+    <h2>What are the key differences between message-passing and shared memory approaches?</h2>
     <br>
-    <h2>What is the difference between strong and eventual consistency?</h2>
-    <a href='./consistency2.html' class="btn btn-primary"> Reveal Answer </a>
+    <p style="font-size: 20px"> Answer:</p>
+    <p style="font-size: 20px">
+        Message-passing allows processes to operate independently and communicate through explicit messages, whereas shared memory requires synchronization to manage concurrent access to a common memory space.
     <br>
-    <h2>What is the CAP theorem and how does it relate to consistency?</h2>
-    <a href='./consistency3.html' class="btn btn-primary"> Reveal Answer </a>
-
-
-
+    <p>Learn more:</p>
 </body>
 </html>
