--- a/sharedmemory1.html
+++ b/sharedmemory1.html
@@ -18,7 +18,7 @@
                 <li><a href="mutualexclusion.html"  onclick="window.open('mutualexclusion.html', '_self');">2 - Mutual Exclusion</a></li>
                 <li><a href="consistency.html" onclick="window.open('consistency.html', '_self');">3 - Consistency in State/Memory Manipulation</a></li>
                 <li><a href="messagepassing.html" onclick="window.open('messagepassing.html', '_self');">4 - Message Passing</a></li>
-                <li><a href="sharedmemory.html" onclick="window.open('sharedmemory.html', '_self');">5 - Message Passing</a></li>
+                <li><a href="sharedmemory.html" onclick="window.open('sharedmemory.html', '_self');">5 -Shared Memory Models</a></li>
                 <li><a href="scalability.html" onclick="window.open('scalability.html', '_self');">6 - Scalability</a></li>
                 <li><a href="scheduling.html" onclick="window.open('scheduling.html', '_self');">7 - Scheduling and Load Balancing</a></li>
                 <li><a href="speedup.html" onclick="window.open('speedup.html', '_self');">8 - Speedup/Amdahl's Law</a></li>
@@ -26,21 +26,17 @@
         </li>
         </ul>
     </nav>
-    <h1 style="font-size: 40px">Concurrency Questions</h1>
-    <br>
-    <p style="font-size: 20px">Description</p>
+    <h1 style="font-size: 40px">Shared Memory Models Questions</h1>
+    
     <br>
 
-    <h2>What is consistency in distributed systems?</h2>
-    <a href='./consistency1.html' class="btn btn-primary"> Reveal Answer </a>
+    <h2>What is a shared-memory model in parallel and distributed computing?</h2>
     <br>
-    <h2>What is the difference between strong and eventual consistency?</h2>
-    <a href='./consistency2.html' class="btn btn-primary"> Reveal Answer </a>
+    <p style="font-size: 20px"> Answer:</p>
+    <p style="font-size: 20px">
+        A shared-memory model allows multiple processes to access a common memory space, enabling direct communication and data sharing without the need for explicit message-passing. This model simplifies programming but requires synchronization mechanisms to manage concurrent access.
+
     <br>
-    <h2>What is the CAP theorem and how does it relate to consistency?</h2>
-    <a href='./consistency3.html' class="btn btn-primary"> Reveal Answer </a>
-
-
-
+    <p>Learn more:</p>
 </body>
 </html>
