--- a/scalability3.html
+++ b/scalability3.html
@@ -18,7 +18,7 @@
                 <li><a href="mutualexclusion.html"  onclick="window.open('mutualexclusion.html', '_self');">2 - Mutual Exclusion</a></li>
                 <li><a href="consistency.html" onclick="window.open('consistency.html', '_self');">3 - Consistency in State/Memory Manipulation</a></li>
                 <li><a href="messagepassing.html" onclick="window.open('messagepassing.html', '_self');">4 - Message Passing</a></li>
-                <li><a href="sharedmemory.html" onclick="window.open('sharedmemory.html', '_self');">5 -Shared Memory Models</a></li>
+                <li><a href="sharedmemory.html" onclick="window.open('sharedmemory.html', '_self');">5 - Message Passing</a></li>
                 <li><a href="scalability.html" onclick="window.open('scalability.html', '_self');">6 - Scalability</a></li>
                 <li><a href="scheduling.html" onclick="window.open('scheduling.html', '_self');">7 - Scheduling and Load Balancing</a></li>
                 <li><a href="speedup.html" onclick="window.open('speedup.html', '_self');">8 - Speedup/Amdahl's Law</a></li>
@@ -26,21 +26,17 @@
         </li>
         </ul>
     </nav>
-    <h1 style="font-size: 40px">Messsage Passing Questions</h1>
-    <br>
-    <p style="font-size: 20px">Description</p>
+    <h1 style="font-size: 40px">Concurrency Questions</h1>
+    
     <br>
 
-    <h2>What is scalability in the context of parallel and distributed computing?</h2>
-    <a href='./scalability1.html' class="btn btn-primary"> Reveal Answer </a>
+    <h2>Why is scalability important in distributed systems?</h2>
     <br>
-    <h2>What are the two main types of scalability?</h2>
-    <a href='./scalability2.html' class="btn btn-primary"> Reveal Answer </a>
+    <p style="font-size: 20px"> Answer:</p>
+    <p style="font-size: 20px">
+        Scalability is critical because it determines a system's ability to grow with increasing workloads. A scalable system can efficiently allocate resources, maintain performance levels, and manage costs as demand changes, which is essential for applications like cloud computing and large-scale data processing.
+    </p>
     <br>
-    <h2>Scalability is critical because it determines a system's ability to grow with increasing workloads. A scalable system can efficiently allocate resources, maintain performance levels, and manage costs as demand changes, which is essential for applications like cloud computing and large-scale data processing.</h2>
-    <a href='./scalability3.html' class="btn btn-primary"> Reveal Answer </a>
-
-
-
+    <p>Learn more:</p>
 </body>
 </html>
